# LS-core-test

./: .gitignore  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yaml  flake.nix  mcp_guide.md  mcp_server.py  pyproject.toml  run-llama-stack.yaml  test-functions.sh
.github/workflows/: ci.yml
assets/workflow-renderer/: index.html
serverless-workflow/: consolidate_schemas.py  consolidated_workflow_schema.json  pom.xml
serverless-workflow/src/main/java/com/example/: DefinitionFileExecutor.java
tools/: __init__.py  get_orchestrator_instances.py  orchestrator_compile_workflow.py  orchestrator_creation_workflow_rules.py  orchestrator_get_sample_workflow.py  orchestrator_get_schema_rules.py  orchestrator_service.py  orchestrator_workflow_renderer.py
tools/examples/: conditional_logic_input.txt  conditional_logic_output.txt  http_requests_input.txt  http_requests_output.txt  iteration_input.txt  iteration_output.txt  scheduling_input.txt  scheduling_output.txt
