[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP Server with fastMCP dependencies"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "aiofiles>=23.2.1",
    "requests>=2.31.0",
    "typing-extensions>=4.8.0",
    "fastmcp>=0.1.0",
    "playwright>=1.54.0",
    "ipdb >= 0.13.13",
]

[project.optional-dependencies]
dev = [
    "ipdb>=0.13.13",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]
